--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,16 +61,15 @@
 
       {% else %}
       <li>
+        <a href="{% url 'account_signup' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+          <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-log-in"></i></span>
+          <span class="text-sm font-medium">Signup</span>
+        </a>
+      </li>
+      <li>
         <a href="{% url 'account_login' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-log-in"></i></span>
           <span class="text-sm font-medium">Login</span>
-        </a>
-      </li>
-      
-      <li>
-        <a href="{% url 'line:sign_up' %}" class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-          <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i class="bx bx-log-in"></i></span>
-          <span class="text-sm font-medium">Signup</span>
         </a>
       </li>
       {% endif %}
